--- a/index.html
+++ b/index.html
@@ -5,8 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather DashBoard</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 </head>
 <body>
-    
+    <header class="navbar bg-dark text-light d-flex justify-content-center">
+        <h1>Weather DashBoard</h1>
+    </header>
+    <main>
+        <div class="container-fluid">
+            <div class="row">
+                <div id="userInterface" class="bg-light col-3 d-flex">
+                    <div class="form-group w-100">
+                        <div class="p-0 col-10 input-group">
+                            <input id="citySearch" type="text" class="form-control" placeholder="Enter City"/>
+                            <div id="" class="input-ground-append">
+                                <button class="btn btn-primary search-submit" type="button" id="search-submit"><i id="" class="fa fa-search"></i></button>
+                            </div>
+                        </div>
+                        <div class="mt-4 list-group">                        
+                        </div>
+                    </div>
+                </div>
+                <div class="col-9">
+                    <div class="mt-3 card">
+                        <div class="card-body">
+                            <h3 class="card-title mb-4"><span id="currentCity"></span>(<span id="currentDate"></span>)<img id="currentIcon" src="" alt="Weather Icon"></h3>
+                            <p class="card-text">Temperature: <span id="currentTemp"></span> &#8457</p>
+                            <p class="card-text">Humidity: <span id="currentHumidity"></span>%</p>
+                            <p class="card-text">Wind Speed: <span id="currentWindSpeed"></span>MPH</p>
+                            <p class="card-text">UV Index: <span id="currentUV"></span></p>
+                        </div>
+                    </div>
+                    <div class="mt-2">
+                        <h4>5-Day Foreacst</h4>
+                        <div id="day-forecast" class="row justify-content-around text-light m-2">
+                            <div class="col-2 card bg-primary">
+                                <h6 class="card-title">1-13-2022</h6>
+                                <i class="fa fa-sun"></i>
+                                <p class="card-text">Temp: 56°</p>
+                                <p class="card-text">Humidity: 95%</p>
+                            </div>
+                            <div class="col-2 card bg-primary">
+                                <h6 class="card-title">1/14/2022</h6>
+                                <i class="fa fa-sun"></i>
+                                <p class="card-text">Temp: 51°</p>
+                                <p class="card-text">Humidity: 87%</p>
+                        </div>
+                        <div class="col-2 card bg-primary">
+                            <h6 class="card-title">1/15/2022</h6>
+                            <i class="fa fa-sun"></i>
+                            <p class="card-text">Temp: 49°</p>
+                            <p class="card-text">Humidity: 80%</p>
+                    </div>
+                    <div class="col-2 card bg-primary">
+                        <h6 class="card-title">1/16/2022</h6>
+                        <i class="fa fa-sun"></i>
+                        <p class="card-text">Temp: 47°</p>
+                        <p class="card-text">Humidity: 90%</p> 
+                </div>
+                <div class="col-2 card bg-primary">
+                    <h6 class="card-title">1/17/2022</h6>
+                    <i class="fa fa-sun"></i>
+                    <p class="card-text">Temp: 46°</p>
+                    <p class="card-text">Humidity: 91%</p>
+            </div>
+        </div>
+    </main>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
